--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -45,12 +45,12 @@
     </header>
 
     <main>
-      <section>
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <section class="hero-style">
+        <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
         <button class="button-mdl" type="button">Заказать услугу</button>
       </section>
 
-      <section>
+      <section class="specifics-style">
         <h2 hidden>Особенности</h2>
         <ul class="list">
           <li>
@@ -80,7 +80,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="work-style">
         <h2 class="title-sections">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
@@ -95,7 +95,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team-style">
         <h2 class="title-sections">Наша команда</h2>
         <ul class="list">
           <li>
@@ -122,7 +122,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-style">
       <a class="link logo" href="./index.html"><span class="logo-style">Web</span>Studio</a>
       <address class="footer-address">
         <ul class="list">
