--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -116,8 +116,7 @@
         </ul>
       </section>
     </main>
-
-    <footer>
+    <footer class="footer-style">
       <a class="link logo" href="./index.html"><span class="logo-style">Web</span>Studio</a>
       <address class="footer-address">
         <ul class="list">
